--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<div class="">
+<div class="klasa">
   <header class="navbar">
     <nav class="nav-links">
-      <a class="nav-button" routerLink="/home">Home</a>
-      <a class="nav-button" routerLink="/companies">Companies</a>
-      <a class="nav-button" routerLink="/about">About</a>
-      <a class="nav-button" routerLink="/contact">Contact</a>
+      <a class="nav-button" routerLink="/home">Početna</a>
+      <a class="nav-button" routerLink="/companies">Kompanije</a>
+      <a class="nav-button" routerLink="/about">O nama</a>
+      <a class="nav-button" routerLink="/contact">Kontakt</a>
 
       <!-- <a *ngIf="isLoggedIn" class="nav-button" (click)="logout()">Logout</a> -->
       <div class="dropdown" *ngIf="isLoggedIn">
